[gd_scene load_steps=4 format=3 uid="uid://ctpwj6rf8gbwp"]

[ext_resource type="Script" uid="uid://bf1xitxf8lph4" path="res://main-loading-splash/SplashController.gd" id="1_ran4o"]
[ext_resource type="Script" uid="uid://qogeq311e7v2" path="res://_commons/scripts/ChangeSceneController.gd" id="2_po02x"]
[ext_resource type="Texture2D" uid="uid://cxxnjb7teiq0u" path="res://_placeholders/splash_loading.png" id="3_a7sgw"]

[node name="loading_splash_node_scene" type="Node2D"]
script = ExtResource("1_ran4o")
firstCombatPathScena = "res://levels/0000-first-combat/first_combat.tscn"
mainMenuPathScene = "res://main-menu/main_menu_scene.tscn"

[node name="start_next_scene_Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="changeSceneController_Node" type="Node" parent="."]
script = ExtResource("2_po02x")
debug_loading = true
path_to_next_scene = "res://main-menu/main_menu_scene.tscn"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
texture = ExtResource("3_a7sgw")

[connection signal="timeout" from="start_next_scene_Timer" to="." method="start_next_scene_load"]
[connection signal="progressing_loading_scene_completed" from="changeSceneController_Node" to="." method="on_next_scene_is_ready_listener"]
